# DuckIFX

./: .gitignore  CMakeLists.txt
dependencies/glfw-3.1.2/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/glfw-3.1.2/docs/: Doxyfile
dependencies/glfw-3.1.2/examples/: Makefile
dependencies/glfw-3.1.2/src/: Makefile  cmake_install.cmake
dependencies/glfw-3.1.2/tests/: Makefile
include/: object.h  window.h
include/buffers/: vao.h  vbo.h
include/controls/: camera.h  camera_controls.h  controls.h  keys.h
include/duck/: bspline.h  duck_path.h
include/mesh/: Water.h  WaterRipple.h  mesh.h  mesh_data.h  model.h
include/mesh/loaders/: mesh_loader.h  model_demo_loader.h  model_loader.h
include/mesh/loaders/duck/: duck_loader.h
include/meshes/: mesh.h  mesh_data.h
include/rendering/: render_object.h
include/rendering/lighting/: light_directional.h  light_global.h  light_source.h
include/rendering/lighting/types/: light_directional.h  light_point.h  light_spotlight.h
include/rendering/loaders/: light_loader.h  render_object_loader.h
include/shaders/: fragment_shader.h  program.h  shader.h  vertex_shader.h
include/shaders/loaders/: program_loader.h  shader_loader.h
include/textures/: texture_buffer.h  texture_loader.h
res/shaders/: basic_frag.glsl  tex_frag.glsl  tex_vert.glsl
res/shaders/lighting/: bump_frag.glsl  bump_tmp_frag.glsl  cubemap_vert.glsl  light_all_frag.glsl  light_all_vert.glsl  light_dir_frag.glsl  light_flashlight_frag.glsl  light_frag.glsl  light_global_attenuation_frag.glsl  light_global_frag.glsl  light_src_vert.glsl  light_vert.glsl  mat_frag.glsl  mat_vert.glsl
src/: main.cpp
src/buffers/: vao.cpp  vbo.cpp
src/controls/: camera.cpp  camera_controls.cpp  controls.cpp  keys.cpp
src/duck/: bspline.cpp  duck_path.cpp
src/mesh/: Water.cpp  WaterRipple.cpp  mesh.cpp  mesh_data.cpp  mesh_loader.cpp  model.cpp
src/mesh/loaders/: mesh_loader.cpp  model_demo_loader.cpp  model_loader.cpp
src/mesh/loaders/duck/: duck_loader.cpp
src/rendering/: render_object.cpp
src/rendering/lighting/: light_directional.cpp  light_global.cpp  light_source.cpp
src/rendering/lighting/types/: light_directional.cpp  light_point.cpp  light_spotlight.cpp
src/rendering/loaders/: light_loader.cpp  render_object_loader.cpp
src/shaders/: fragment_shader.cpp  program.cpp  shader.cpp  vertex_shader.cpp
src/shaders/loaders/: program_loader.cpp  shader_loader.cpp
src/textures/: texture_buffer.cpp  texture_loader.cpp
